qt-webkit-kiosk (1.03.01) unstable; urgency=low

  * Fixed build version number

 -- Sergey Dryabzhinsky <sergey.dryabzhinsky@gmail.com>  Thu, 19 Apr 2012 22:36:00 +0400

qt-webkit-kiosk (1.03.00) unstable; urgency=low

  * Remove debug output in release build
  * Attach user scripts and styles when page loaded

 -- Sergey Dryabzhinsky <sergey.dryabzhinsky@gmail.com>  Thu, 19 Apr 2012 00:36:00 +0400

qt-webkit-kiosk (1.02.01) unstable; urgency=low

  * Fixed startup issue with only one command prompt parameter defined.

 -- Sergey Dryabzhinsky <sergey.dryabzhinsky@gmail.com>  Thu, 18 Apr 2012 22:10:00 +0400

qt-webkit-kiosk (1.02.00) unstable; urgency=low

  * Fixed startup issue with only one command prompt parameter defined.
  * Fixed issue with window size and position when screen resolution changed.
  * Fixed build issues on older than Ununtu 11.10 systems.

 -- Sergey Dryabzhinsky <sergey.dryabzhinsky@gmail.com>  Thu, 17 Apr 2012 23:28:00 +0400

qt-webkit-kiosk (1.01.00) unstable; urgency=low

  * Initial Release.

 -- Sergey Dryabzhinsky <sergey.dryabzhinsky@gmail.com>  Mon, 12 Dec 2011 02:36:28 +0400